chore: helm task-server、data-service obs配置分开 (merge request !2061)
Squash merge branch 'obs-db-config' into 'bcc/v1.7.x'
chore: task-server、data-service obs配置分开



TAPD: --story=122150140

--- a/docs/support-file/helm/templates/dataservice/configmap.yaml
+++ b/docs/support-file/helm/templates/dataservice/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config.yaml: |-
     obsDatabase:
-      {{- toYaml .Values.obsDatabase | nindent 6 }}
+      {{- toYaml .Values.dataservice.obsDatabase | nindent 6 }}
     network:
       bindIP:
       port: {{ .Values.dataservice.port}}
