--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -319,6 +319,37 @@ dataservice:
         targetPort: 80
         nodePort:
   port: 80
+  # data server obs账单推送db， 目前是滚服罚金账单在用
+  obsDatabase:
+    # defines resource database related settings.
+    resource:
+      # is a seed list of host:port addresses of database nodes.
+      endpoints:
+        - 127.0.0.1:3306
+      database: hcm
+      user: root
+      password: admin
+      # DialTimeoutSec is timeout in seconds to wait for a response from the db server
+      # all the timeout default value reference:
+      # https://dev.mysql.com/doc/refman/8.0/en/server-system-variables.html.
+      dialTimeoutSec:
+      readTimeoutSec:
+      writeTimeoutSec:
+      maxIdleTimeoutMin:
+      maxOpenConn:
+      maxIdleConn:
+      # defines tls related options.
+      tls:
+        # server should be accessed without verifying the TLS certificate.
+        insecureSkipVerify:
+        # server requires TLS client certificate authentication.
+        certFile:
+        # server requires TLS client certificate authentication.
+        keyFile:
+        # trusted root certificates for server.
+        caFile:
+        # the password to decrypt the certificate.
+        password:
 
 hcservice:
   ## 镜像
@@ -534,38 +565,38 @@ taskserver:
   useLabel:
     # use label when pull aws china site bills
     awsCN: true
+  # task server obs账单推送db， 目前是三方云账单在用
+  obsDatabase:
+    # defines resource database related settings.
+    resource:
+      # is a seed list of host:port addresses of database nodes.
+      endpoints:
+        - 127.0.0.1:3306
+      database: hcm
+      user: root
+      password: admin
+      # DialTimeoutSec is timeout in seconds to wait for a response from the db server
+      # all the timeout default value reference:
+      # https://dev.mysql.com/doc/refman/8.0/en/server-system-variables.html.
+      dialTimeoutSec:
+      readTimeoutSec:
+      writeTimeoutSec:
+      maxIdleTimeoutMin:
+      maxOpenConn:
+      maxIdleConn:
+      # defines tls related options.
+      tls:
+        # server should be accessed without verifying the TLS certificate.
+        insecureSkipVerify:
+        # server requires TLS client certificate authentication.
+        certFile:
+        # server requires TLS client certificate authentication.
+        keyFile:
+        # trusted root certificates for server.
+        caFile:
+        # the password to decrypt the certificate.
+        password:
 
-# defines obs database related settings.
-obsDatabase:
-  # defines resource database related settings.
-  resource:
-    # is a seed list of host:port addresses of database nodes.
-    endpoints:
-      - 127.0.0.1:3306
-    database: hcm
-    user: root
-    password: admin
-    # DialTimeoutSec is timeout in seconds to wait for a response from the db server
-    # all the timeout default value reference:
-    # https://dev.mysql.com/doc/refman/8.0/en/server-system-variables.html.
-    dialTimeoutSec:
-    readTimeoutSec:
-    writeTimeoutSec:
-    maxIdleTimeoutMin:
-    maxOpenConn:
-    maxIdleConn:
-    # defines tls related options.
-    tls:
-      # server should be accessed without verifying the TLS certificate.
-      insecureSkipVerify:
-      # server requires TLS client certificate authentication.
-      certFile:
-      # server requires TLS client certificate authentication.
-      keyFile:
-      # trusted root certificates for server.
-      caFile:
-      # the password to decrypt the certificate.
-      password:
   # maxSlowLogLatencyMS defines the max tolerance in millisecond to execute
   # the database command, if the cost time of execute have >= the maxSlowLogLatencyMS
   # then this request will be logged.
