--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -26,7 +26,7 @@ data:
     useLabel:
       {{- toYaml .Values.taskserver.useLabel | nindent 6 }}
     obsDatabase:
-      {{- toYaml .Values.obsDatabase | nindent 6 }}
+      {{- toYaml .Values.taskserver.obsDatabase | nindent 6 }}
     cmdb:
       {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
     alarm:
