feat: 滚服项目-资源归还到期提醒 --story=121856565 (merge request !2039)
Squash merge branch 'v1.7.x-rolling-notice' into 'bcc/v1.7.x'
feat: 滚服项目-资源归还到期提醒 --story=121856565

 



TAPD: --story=121856565

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -377,6 +377,12 @@ recover:
 
 rollingServer:
   syncBill: true
+  returnNotification:
+    enable: false
+    # 可用于开发调试，是否通知业务
+    sendToBusiness: false
+    # 通知时是否附带给该用户
+    defaultReceivers:
 
 caiche:
   host: http://127.0.0.1
