--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1131,6 +1131,12 @@ localTimezone: "Asia/Shanghai"
 
 rollingServer:
   syncBill: true
+  returnNotification:
+    enable: false
+    # 可用于开发调试，是否通知业务
+    sendToBusiness: false
+    # 通知时是否附带给该用户
+    defaultReceiver:
 resPlan:
   reportPenaltyRatio: false
 
