--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,7 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.7.4.3
+  tag: 1.7.4.4
 
 serviceAccount:
   create: true
@@ -1136,7 +1136,7 @@ rollingServer:
     # 可用于开发调试，是否通知业务
     sendToBusiness: false
     # 通知时是否附带给该用户
-    defaultReceiver:
+    defaultReceivers:
 resPlan:
   reportPenaltyRatio: false
 
