feat: 新增「CVM生产」重启恢复能力 (merge request !2099)
Squash merge branch 'v1.7.x-cvm-product-recover' into 'bcc/v1.7.x'
feat: 新增「CVM生产」重启恢复能力


TAPD: --story=122236987

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -374,6 +374,8 @@ recover:
   enableApplyRecover: false
   # 开启回收单据恢复服务
   enableRecycleRecover: false
+  # 开启cvm生产恢复服务
+  enableCvmProdRecover: false
 
 rollingServer:
   syncBill: true
