feat: 优化aws月度任务逻辑 --story=122694231 (merge request !2123)
Squash merge branch 'bcc/feature-aws-deduct' into 'bcc/v1.7.x'
feat: 优化aws月度任务逻辑
--story=122694231

TAPD: --story=122694231

--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,8 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.7.6.1
+  # tag版本，不需要带v前缀
+  tag: 1.7.6.2
 
 serviceAccount:
   create: true
@@ -687,9 +688,9 @@ accountserver:
     # 根账号需要抵扣的项目列表
     awsDeductAccountItems:
       deductItemTypes:
-        00000001: # 根账号ID
-          line_item_line_item_type: # 项目涵盖的费用类型
-            - Tax
+        #"123456789": # 根账号对应的云账号ID
+        #  line_item_line_item_type: # 项目涵盖的费用类型
+        #    - Tax
     gcpCredits:
     #- rootAccountCloudID: gcp_support_account
     #  returnConfigs:
