feat: 华为云税费剔除、GCP/AWS ai账单剔除 (merge request !2136)
Squash merge branch 'aws-gcp-huawei-ai-tax-deduct' into 'bcc/v1.7.x'
fix: 补充华为账单runner case

TAPD: --story=122760521
TAPD: --story=122760510
TAPD: --story=122760492

--- a/cmd/account-server/etc/account_server.yaml
+++ b/cmd/account-server/etc/account_server.yaml
@@ -71,12 +71,24 @@ controller:
   mainAccountSummarySyncDuration:
   rootAccountSummarySyncDuration:
   dailySummarySyncDuration:
-  monthTaskSyncDuration: 
+  monthTaskSyncDuration: 10m
 
 # tmp file dir, default: /tmp
 tmpFileDir: /tmp
 
 billAllocation:
+  awsAIDeduct:
+    - rootAccountCloudID: "1234abc"
+      name: ai
+      memo: 抵扣ai相关账单
+  gcpAIDeduct:
+    - rootAccountCloudID: "abc1234"
+      name: ai
+      memo: 抵扣ai相关账单
+  huaweiTaxDeduct:
+    - rootAccountCloudID: "abab123"
+      name: tax
+      memo: 抵扣华为云税费
   # aws savings plans allocation option
   awsSavingsPlans:
 #    - rootAccountCloudID: xxx
@@ -101,6 +113,7 @@ billAllocation:
   gcpCommonExpense:
     excludeAccountCloudIDs:
       # - "account_do_not_share_common_expense"
+
 # defines esb related settings.
 esb:
   # endpoints is a seed list of host:port addresses of esb nodes.
