feat: 安全组删除-增加MOA校验、重构原MOA校验模式 (merge request !2141)
Squash merge branch 'bcc/feature-sg-mgmt-new-moa' into 'bcc/feature-sg-mgmt'
feat: 安全组删除-增加MOA校验

--story=121679170 MOA校验重构

docs: MOA二次验证重构文档

--story=121679170 MOA校验重构

原pr 【feat: 安全组删除-增加MOA校验】 https://git.woa.com/bcc/hcm/-/merge_requests/2027
 



TAPD: --story=121679170

--- a/docs/support-file/helm/templates/cloudserver/configmap.yaml
+++ b/docs/support-file/helm/templates/cloudserver/configmap.yaml
@@ -58,3 +58,5 @@ data:
       {{- toYaml .Values.cloudserver.orgTopoConfig | nindent 6 }}
     taskManagement:
       {{- toYaml .Values.cloudserver.taskManagement | nindent 6 }}
+    moa:
+      {{- toYaml .Values.moa | nindent 6 }}
