feat: 安全组 自研云适配 --story=121813886 (merge request !2142)
Squash merge branch 'feat-bcc/feat-121813886' into 'bcc/feature-sg-mgmt'
feat: 安全组 自研云适配 --story=121813886

 



TAPD: --story=121813886

--- a/cmd/hc-service/etc/hc_service.yaml
+++ b/cmd/hc-service/etc/hc_service.yaml
@@ -98,3 +98,7 @@ esb:
     caFile:
     # the password to decrypt the certificate.
     password:
+
+# security group mgmt skip list
+securityGroupMgmtSkipList:
+  - sg-xxxxxx
