feat: 多租户-内部版woa-server支持开关 --story=121705932

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -111,3 +111,5 @@ data:
       {{- toYaml .Values.resPlan | nindent 6 }}
     resourceSync:
       {{- toYaml .Values.resourceSync | nindent 6 }}
+    tenant:
+      {{- toYaml .Values.tenant | nindent 6 }}
