feat: 主机回收巡检 (merge request !2177)
Squash merge branch 'bcc/v1.7.x-recycle-stuck-check' into 'bcc/v1.7.x'
feat: 增加流水日志

 



TAPD: --story=122441363

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -404,3 +404,12 @@ resourceSync:
   syncSubnet: 30
   syncCapacity: 360
   syncLeftIP: 360
+
+stuckCheck:
+  recycle:
+    enable: true
+    interval: 24h
+    startUpDelay: 2m
+    # 关注 [now-maxTime,now-minTime] 的单据
+    minTime: 24h
+    maxTime: 336h
