--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1268,3 +1268,12 @@ orgTopoConfig:
   enable: false
   # syncIntervalMin org topo config interval, unit: min.
   syncIntervalMin: 600
+# 卡单检测
+stuckCheck:
+  recycle:
+    enable: true
+    interval: 24h
+    startUpDelay: 2m
+    # 关注 [now-maxTime,now-minTime] 的单据
+    minTime: 24h
+    maxTime: 336h
