--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -111,3 +111,5 @@ data:
       {{- toYaml .Values.resPlan | nindent 6 }}
     resourceSync:
       {{- toYaml .Values.resourceSync | nindent 6 }}
+    stuckCheck:
+      {{- toYaml .Values.stuckCheck | nindent 6 }}
