--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -333,9 +333,14 @@ bkchat:
      资源申请单链接：http://scrtest.ied.com/#/cr/service/apply/records/%d
 
 resourceDissolve:
-  originDate: "20240105"
+  originDate: "20241219"
+  # 需要从裁撤系统同步对应项目名称的主机
   projectNames:
-    - "2025机房裁撤"
+    - "2025机房裁撤（国内）"
+    - "2025机房裁撤（海外）"
+  # 裁撤列表展示需要排除对应项目名称的主机
+  listExcludedProjectNames:
+    - "2025机房裁撤（海外）"
   syncDissolveHost: true
 
 elasticsearch:
