--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.1.10
-appVersion: 1.8.0.10
+version: 1.1.11-alpha.1
+appVersion: 1.8.1.0-alpha.1
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
