--- a/docs/support-file/helm/templates/cloudserver/configmap.yaml
+++ b/docs/support-file/helm/templates/cloudserver/configmap.yaml
@@ -63,4 +63,6 @@ data:
     cmdb:
       {{- toYaml .Values.cmdb | nindent 6 }}
     ccHostPoolBiz: {{ .Values.ccHostPoolBiz }}
+    clbImportConfig:
+      {{- toYaml .Values.cloudserver.clbImportConfig | nindent 6 }}
 
