feat: 调整taskserver的configmap中cmdb配置 (merge request !2339)
Squash merge branch 'bcc/v1.8.x-fix-helm' into 'bcc/v1.8.x'
feat: 调整taskserver的configmap中cmdb配置

 



TAPD: --story=125212561

--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -28,7 +28,7 @@ data:
     obsDatabase:
       {{- toYaml .Values.taskserver.obsDatabase | nindent 6 }}
     cmdb:
-      {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
+      {{- toYaml .Values.cmdb | nindent 6 }}
     alarm:
       {{- toYaml .Values.alarm | nindent 6 }}
     sampwd:
