feat: 自研云主机同步优化 --story=123866171 (merge request !2341)
Squash merge branch 'v1.8.x-cherry-pick-sync-host' into 'bcc/v1.8.x'
feat: 自研云主机同步优化 --story=123866171

 



TAPD: --story=123866171

--- a/cmd/hc-service/etc/hc_service.yaml
+++ b/cmd/hc-service/etc/hc_service.yaml
@@ -72,6 +72,9 @@ sync:
     - rule: tcloud/load_balancer/*
       syncConcurrent: 1
       listConcurrent: 1
+    - rule: tcloud-ziyan/cvm/*
+      syncConcurrent: 1
+      listConcurrent: 1
   # if no any rule matched, use this default config
   defaultConcurrent: 1
 
