--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -407,6 +407,9 @@ hcservice:
       - rule: tcloud/load_balancer/*
         syncConcurrent: 1
         listConcurrent: 1
+      - rule: tcloud-ziyan/cvm/*
+        syncConcurrent: 1
+        listConcurrent: 1
     # if no any rule matched, use this default config
     defaultConcurrent: 1
   # 安全组资源归属白名单, 数据类型[]string
