feat: 新增免moa的主机重启接口 --story=124416040

--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -555,7 +555,7 @@ paths:
           description: ''
       x-bk-apigateway-resource:
         isPublic: false
-        allowApplyPermission: true
+        allowApplyPermission: false
         matchSubpath: false
         backend:
           type: HTTP
