--- a/front/package.json
+++ b/front/package.json
@@ -59,6 +59,7 @@
     "@types/qs": "6.9.7",
     "@types/validator": "13.12.0",
     "@vue/babel-plugin-jsx": "1.1.1",
+    "chokidar": "3.6.0",
     "cross-env": "7.0.3",
     "enhanced-resolve": "5.10.0",
     "eslint-config-prettier": "9.1.0",
