--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -283,6 +283,8 @@ cloudserver:
         targetPort: 80
         nodePort:
   port: 80
+  concurrentConfig:
+    clbImportCount: 10
 
 dataservice:
   ## 镜像
