--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -14,7 +14,9 @@ image:
   pullPolicy: IfNotPresent
   pullSecrets: []
   # tag版本，不需要带v前缀
-  tag: 1.8.1.9
+  tag: 1.8.2.0-alpha.3
+
+apigwReleaseVersion: 1.0.0
 
 serviceAccount:
   create: true
@@ -920,6 +922,8 @@ dbConnConfig:
   maxIdleConn: 100
   limiterQps: 500
   limiterBurst: 500
+  timeZone: UTC
+
 ## 内置Etcd
 ##
 etcd:
