--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -669,3 +669,28 @@ paths:
           userVerifiedRequired: true
         disabledStages: []
         descriptionEn:
+  /api/v1/cloud/bizs/{bk_biz_id}/cvms/sops/batch/reboot_async:
+    post:
+      operationId: batch_biz_reboot_cvm
+      description: 批量重启虚拟机,异步接口&支持任务管理
+      tags:
+        - Cvm
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: false
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/cloud/bizs/{bk_biz_id}/cvms/sops/batch/reboot_async
+          matchSubpath: false
+          timeout: 30
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
