docs: 自研云升降配-封装CRP升降配接口接口文档 --story=125766320 (merge request !2381)
Squash merge branch 'res-plan/upgrade-cvm-docs' into 'bcc/v1.8.x'
docs: 自研云升降配-封装CRP升降配接口接口文档 --story=125766320

 



TAPD: --story=125766320

--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -694,3 +694,29 @@ paths:
           userVerifiedRequired: true
         disabledStages: []
         descriptionEn:
+  /api/v1/woa/bizs/{bk_biz_id}/task/create/upgrade/crp_order:
+    post:
+      operationId: create_crp_upgrade_order
+      description: 校验预测并创建CRP升降配单据
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: false
+        allowApplyPermission: true
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/bizs/{bk_biz_id}/task/create/upgrade/crp_order
+          matchSubpath: false
+          timeout: 30
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
