feat: 新增网关回调配置 --story=126964270 (#1733)

--- a/cmd/cloud-server/etc/cloud_server.yaml
+++ b/cmd/cloud-server/etc/cloud_server.yaml
@@ -184,6 +184,7 @@ esb:
     password:
 
 bkHcmUrl: "http://hcm.bk.com"
+bkApigwHCMUrl: "http://hcm.bk.com"
 
 # cloudResource cloud resource relation settings.
 cloudResource:
