feat: 预测预算联动-额度管理 --story=126497653 (merge request !2460)
Squash merge branch 'local-bcc-scr-plan-quota-250819-1' into 'bcc/feature-res-plan-transfer'
feat: 预测预算联动-额度管理 --story=126497653


TAPD: --story=126497653

--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1190,6 +1190,12 @@ rollingServer:
     defaultReceivers:
 resPlan:
   reportPenaltyRatio: false
+  refreshTransferQuota:
+    enable: false
+    # 预测转移额度
+    quota: 0
+    # 预测转移审批额度
+    audit_quota: 0
 
 # Alarm告警平台的配置
 alarm:
