--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -372,6 +372,10 @@ resPlan:
     enable: false
     sendToBusiness: false
     defaultReceiver: ""
+  refreshTransferQuota:
+    enable: false
+    quota: 5000
+    audit_quota: 1000
 
 # 开启自研云资源同步服务,单位:分钟
 resourceSync:
