--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.1.33-alpha.1
-appVersion: 1.8.5.4-alpha.1
+version: 1.1.33
+appVersion: 1.8.5.4
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
