feat: CLB设备查询-使用新表格组件解决表格卡顿问题 (#1780)
--story=127519663
--story=127519598

--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "@blueking/notice-component": "2.0.5",
     "@blueking/release-note": "0.0.1-beta.17",
     "@blueking/roll-request": "1.0.0-alpha",
+    "@blueking/tdesign-ui": "0.0.1-beta.92",
     "axios": "1.10.0",
     "bkui-vue": "2.0.1-beta.34",
     "dayjs": "1.11.3",
@@ -40,7 +41,7 @@
     "reflect-metadata": "0.2.2",
     "uuid": "9.0.0",
     "validator": "13.12.0",
-    "vue": "3.5.13",
+    "vue": "^3.5.13",
     "vue-clipboard3": "2.0.0",
     "vue-draggable-plus": "0.2.6",
     "vue-i18n": "11.1.9",
