--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -619,56 +619,6 @@ paths:
           userVerifiedRequired: true
         disabledStages: []
         descriptionEn:
-  /api/v1/cloud/bizs/{bk_biz_id}/task_managements/list_by_cond:
-    post:
-      operationId: list_biz_task_management_by_cond
-      description: 查询指定条件的任务管理列表
-      tags:
-        - TaskManage
-      responses:
-        default:
-          description: ''
-      x-bk-apigateway-resource:
-        isPublic: false
-        allowApplyPermission: true
-        matchSubpath: false
-        backend:
-          type: HTTP
-          method: post
-          path: /api/v1/cloud/bizs/{bk_biz_id}/task_managements/list_by_cond
-          matchSubpath: false
-          timeout: 30
-          upstreams: {}
-          transformHeaders: {}
-        authConfig:
-          userVerifiedRequired: true
-        disabledStages: []
-        descriptionEn:
-  /api/v1/cloud/bizs/{bk_biz_id}/task_details/list_by_cond:
-    post:
-      operationId: list_biz_task_detail_by_cond
-      description: 查询指定条件的任务详情
-      tags:
-        - TaskManage
-      responses:
-        default:
-          description: ''
-      x-bk-apigateway-resource:
-        isPublic: false
-        allowApplyPermission: true
-        matchSubpath: false
-        backend:
-          type: HTTP
-          method: post
-          path: /api/v1/cloud/bizs/{bk_biz_id}/task_details/list_by_cond
-          matchSubpath: false
-          timeout: 30
-          upstreams: {}
-          transformHeaders: {}
-        authConfig:
-          userVerifiedRequired: true
-        disabledStages: []
-        descriptionEn:
   /api/v1/cloud/bizs/{bk_biz_id}/cvms/sops/batch/reboot_async:
     post:
       operationId: batch_biz_reboot_cvm
@@ -686,6 +636,31 @@ paths:
           type: HTTP
           method: post
           path: /api/v1/cloud/bizs/{bk_biz_id}/cvms/sops/batch/reboot_async
+          matchSubpath: false
+          timeout: 30
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/cloud/bizs/{bk_biz_id}/cvms/unverify/batch/reset_async:
+    post:
+      operationId: batch_unverify_biz_reset_cvm
+      description: 批量免iOA验证的重装虚拟机接口
+      tags:
+        - Cvm
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: false
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/cloud/bizs/{bk_biz_id}/cvms/unverify/batch/reset_async
           matchSubpath: false
           timeout: 30
           upstreams: {}
