feat: 机房裁撤-云徙项目-数据同步 --story=127434527 (merge request !2522)
Squash merge branch 'v1.8.x-yunxi' into 'bcc/v1.8.x'
feat: 机房裁撤-云徙项目-数据同步 --story=127434527

 



TAPD: --story=127434527

--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1088,6 +1088,8 @@ resourceDissolve:
   originDate: "20240105"
   projectNames:
     - "2025机房裁撤"
+  projectIDs:
+    - 26
   syncDissolveHost: true
 
 elasticsearch:
