--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -319,6 +319,9 @@ resourceDissolve:
   # 裁撤列表展示需要排除对应项目名称的主机
   listExcludedProjectNames:
     - "2025机房裁撤（海外）"
+  # 新版裁撤/云徙列表查询对应的项目id
+  projectIDs:
+    - 26
   syncDissolveHost: true
 
 elasticsearch:
