--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.1.7-alpha.1
-appVersion: v1.8.7-alpha.1
+version: 1.1.7
+appVersion: v1.8.7
 
 dependencies:
   - name: common
