feat: 获取审批节点结果网关接口映射id调整 --story=127610365 (merge request !2574)
Squash merge branch 'v1.8.x-fix-dosc' into 'bcc/v1.8.x'
feat: 获取审批节点结果网关接口映射id调整 --story=127610365


TAPD: --story=127610365

--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -775,7 +775,7 @@ paths:
         descriptionEn:
   /api/v1/woa/task/find/approve_node/result:
     post:
-      operationId: get_approve_node_result
+      operationId: find_approve_node_result
       description: 获取审批节点结果
       tags:
         - SCR
