docs: 1.8.7.0-alpha.1 --story=128121419 (merge request !2610)
Squash merge branch 'v1.8.x-merge-clb' into 'bcc/v1.8.x'
docs: 1.8.7.0-alpha.1 --story=128121419

 



TAPD: --story=128121419

--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.1.41
-appVersion: 1.8.5.12
+version: 1.1.42-alpha.1
+appVersion: 1.8.7.0-alpha.1
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
