feat: 资源预测-超上限问题详细提示 --story=127811116 (merge request !2602)
Squash merge branch 'feat-bcc/feat-127811116' into 'bcc/v1.8.x'
feat: 资源预测-超上限问题详细提示 --story=127811116

 



TAPD: --story=127811116

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -382,6 +382,7 @@ resPlan:
     quota: 5000
     audit_quota: 1000
   adminAuditor: []
+  crpOverLimitContact: ["demo"]
 
 # 开启自研云资源同步服务,单位:分钟
 resourceSync:
@@ -482,3 +483,4 @@ bkbotapproval:
     caFile:
     # the password to decrypt the certificate.
     password:
+
